<resources>
    <string name="app_name">Trabajo de Graduación</string>
    <string name="action_settings" />
    <string name="title_activity_login">Sign in</string>


    <string name="app_titulo_login">Proyecto de Graduación</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Carnet">Carnet</string>
    <string name="CodigoGrupo">Codigo Grupo</string>
    <string name="TipoRol">Tipo Rol</string>
    <string name="Actualizar">Actualizar</string>
    <string name="Limpiar">Limpiar</string>
    <string name="Nombre">Nombre</string>
    <string name="Consultar">Consultar</string>
    <string name="Insertar">Insertar</string>
    <string name="Apellido">Apellido</string>
    <string name="Escuela">Escuela</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="NuevoUsuario">Nuevo Usuario</string>
    <string name="Hola">hola</string>

    <string name="title_activity_propuesta_perfil_menu_activity">PropuestaPerfilActivity</string>
    <string name="title_activity_tipo_proyecto_menu">TipoProyectoActivity</string>

    <string name="title_activity_propuesta_perfil_insertar">PropuestaPerfilInsertarActivity</string>
    <string name="title_activity_propuesta_perfil_eliminar">PropuestaPerfilEliminarActivity</string>
    <string name="title_activity_propuesta_perfil_actualizar">PropuestaPerfilActualizarActivity</string>
    <string name="title_activity_propuesta_perfil_consultar">PropuestaPerfilConsultarActivity</string>

    <string name="title_activity_tipo_proyecto_insertar">TipoProyectoInsertarActivity</string>
    <string name="title_activity_tipo_proyecto_eliminar">TipoProyectoEliminarActivity</string>
    <string name="title_activity_tipo_proyecto_actualizar">TipoProyectoActualizarActivity</string>
    <string name="title_activity_tipo_proyecto_consultar">TipoProyectoConsultarActivity</string>

    <string name="propuesta_perfil_menu">Función a Ejecutar Propuesta Perfil</string>
    <string name="tipo_proyecto_menu">Función a Ejecutar Tipo Proyecto</string>

    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>

    <string name="numero_tema">Numero de tema</string>
    <string name="codigo_grupo">Codigo de grupo</string>
    <string name="tema_perfil">Tema perfil</string>
    <string name="estado">Estado</string>
    <string name="ano_propuesta">Año de propuesta</string>

    <string name="nombre_tipo">Tipo de proyecto</string>
    <string name="tipo_defensa">Tipo de defensa</string>
    <string name="tipo_realizacion">Tipo de realizacion</string>


    <string name="tittle_activity_evaluacion_menu">EvaluacionMenuActivity</string>
    <string name="title_activity_detalle_evaluacion_menu">Detalle_EvaluacionMenuActivity</string>
    <string name="title_activity_local_evaluacion_menu">Local_EvaluacionMenuActivity</string>
    <string name="title_activity_evaluacion_insertar">EvaluacionInsertarActivity</string>
    <string name="title_activity_evaluacion_eliminar">EvaluacionEliminarActivity</string>
    <string name="title_activity_evaluacion_actualizar">EvaluacionActualizarActivity</string>
    <string name="title_activity_evaluacion_consultar">EvaluacionConsultarActivity</string>
    <string name="title_activity_detalle_evaluacion_insertar">Detalle_EvaluacionInsertarActivity</string>
    <string name="title_activity_detalle_evaluacion_eliminar">Detalle_EvaluacionEliminarActivity</string>
    <string name="title_activity_detalle_evaluacion_actualizar">Detalle_EvaluacionActualizarActivity</string>
    <string name="title_activity_detalle_evaluacion_consultar">Detalle_EvaluacionConsultarActivity</string>
    <string name="title_activity_local_evaluacion_insertar">Local_EvacluacionInsertarActivity</string>
    <string name="title_activity_local_evaluacion_eliminar">Local_EvaluacionEliminarActivity</string>
    <string name="title_activity_local_evaluacion_actualizar">Local_EvaluacionActualizarActivity</string>
    <string name="title_activity_local_evaluacion_consultar">Local_EvaluacionConsultarActivity</string>
    <string name="numero_evaluacion">Numero de la evaluación</string>
    <string name="nombre_evaluacion">Nombre de la evaluacion</string>
    <string name="nota_global">Nota global</string>
    <string name="opciones">Opciones</string>
    <string name="limpiar">Limpiar</string>
    <string name="insertar">Insertar</string>
    <string name="consultar">Consultar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="carnet">Carnet</string>
    <string name="codigo_local">Codigo Local</string>
    <string name="nombre_local">Nombre Local</string>
    <string name="disponible">Disponibilidad</string>
    <string name="lugar">Lugar</string>

    <string name="tve">Ingresar Estudiante</string>
    <string name="tvcarnete">Carnet</string>
    <string name="tvnombrese">Nombres</string>
    <string name="tvapellidose">Apellidos</string>
    <string name="binsertare">Insertar</string>
    <string name="blimpiare">Limpiar</string>
    <string name="tvae">Actualizar Estudiante</string>
    <string name="tvaecarnet">Carnet</string>
    <string name="tvaenombres">Nombres</string>
    <string name="tvaeapellidos">Apellidos</string>
    <string name="baeinsertar">Actualizar</string>
    <string name="baelimpiar">Limpiar</string>
    <string name="tvce">Consultar Estudiante</string>
    <string name="tvcecarnet">Carnet</string>
    <string name="tvcenombres">Nombres</string>
    <string name="tvceapellidos">Apellidos</string>
    <string name="bceconsultar">Consultar</string>
    <string name="tvee">Eliminar Estudiante</string>
    <string name="tveecarnet">Carnet</string>
    <string name="beeeliminar">Eliminar</string>
    <string name="bigrestablecer">Restablecer</string>
    <string name="biginsertar">Ingresar</string>
    <string name="tvigaño">Año</string>
    <string name="tvigintegrantes">Número de integrantes</string>
    <string name="tvigcodigo">Codigo de grupo</string>
    <string name="tvig">Ingresar grupo nuevo</string>
    <string name="tvag">Actualizar Grupo</string>
    <string name="tvagcodigo">Código</string>
    <string name="tvagintegrantes">No. de Integrantes</string>
    <string name="tvagaño">Año</string>
    <string name="bagactualizar">Actualizar</string>
    <string name="bagrestablecer">Restablecer</string>
    <string name="tvcgcodigo">Código</string>
    <string name="bcgconsultar">Consultar</string>
    <string name="tvcgintegrantes">No. de integrantes</string>
    <string name="tvcgaño">Año</string>
    <string name="tvegcodigo">Codigo de grupo</string>
    <string name="begeliminar">Eliminar grupo</string>
    <string name="tvieg">Entrar a grupo</string>
    <string name="tviegcarnet">Carnet</string>
    <string name="tviegcodigo">Codigo de grupo</string>
    <string name="biegentrar">Entrar al grupo</string>
    <string name="bieglimpiar">Limpiar</string>
    <string name="tvmeg">Cambiar de grupo</string>
    <string name="tvmegcarnet">Carnet</string>
    <string name="tvmegcodigo">Codigo de grupo</string>
    <string name="bmegcambiar">Cambiar</string>
    <string name="bmeglimpiar">Limpiar</string>
    <string name="tveeg">Salir del grupo</string>
    <string name="tveegcarnet">Carnet</string>
    <string name="tveegcodigo">Código</string>
    <string name="beegsalir">Salir del grupo</string>
    <string name="beeglimpiar">Limpiar</string>
    <string name="tvceg">Consultar grupo inscrito</string>
    <string name="tvcegcarnet">Carnet</string>
    <string name="tvcegcodigo">Código de grupo</string>
    <string name="tvcegnombe">Nombres</string>
    <string name="tvcegappelido">Apellidos</string>
    <string name="tvcegaño">Año del grupo</string>
    <string name="bcegconsultar">Consultar</string>
    <string name="bceglimpiar">Limpiar</string>
    <string name="tvcegintegrantes">No. de integrantes</string>




</resources>
