<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sv.ues.fia.tarea1.InsertarGrupoActivity">

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvig"
        android:id="@+id/tvig"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvigintegrantes"
        android:id="@+id/tvigintegrantes"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/tvig"
        android:layout_alignLeft="@+id/tvig"
        android:layout_alignStart="@+id/tvig" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:id="@+id/npigintegrantes"
        android:layout_below="@+id/tvigintegrantes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        style="@android:style/Theme.Holo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvigaño"
        android:id="@+id/tvigaño"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/npigintegrantes"
        android:layout_centerHorizontal="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:id="@+id/npigaño"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/tvigaño"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biginsertar"
        android:id="@+id/biginsertar"
        android:onClick="insertarGrupo"
        android:layout_below="@+id/npigaño"
        android:layout_toRightOf="@+id/npigaño"
        android:layout_toEndOf="@+id/npigaño"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bigrestablecer"
        android:id="@+id/bigrestablecer"
        android:onClick="restablecer"
        android:layout_alignBaseline="@+id/biginsertar"
        android:layout_alignBottom="@+id/biginsertar"
        android:layout_toLeftOf="@+id/tvigaño"
        android:layout_toStartOf="@+id/tvigaño" />

</RelativeLayout>
